crates/carta/tests/snapshots/golden_writer__docbook__common__footnote-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  ref<footnote>
    <para>
      the note body
    </para>
  </footnote>
</para>
