crates/carta/tests/snapshots/golden_writer__docbook__common__footnote-two.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  x<footnote>
    <para>
      first
    </para>
  </footnote> y<footnote>
    <para>
      second
    </para>
  </footnote>
</para>
