crates/carta/tests/snapshots/golden_writer__docbook__common__header-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" xml:id="anchor">
  <title>Titled</title>
  <para>
  </para>
</section>
