crates/carta/tests/snapshots/golden_writer__docbook__common__header-unnumbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" xml:id="hidden" role="unnumbered">
  <title>Hidden</title>
  <para>
  </para>
</section>
