crates/carta/tests/snapshots/golden_writer__docbook__common__horizontal-rule.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  above
</para>
<para>
  below
</para>
