crates/carta/tests/snapshots/golden_writer__docbook__common__image-external.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <inlinemediaobject>
    <imageobject>
      <imagedata fileref="https://example.org/i.png" />
    </imageobject>
    <textobject>
      <phrase>alt</phrase>
    </textobject>
  </inlinemediaobject>
</para>
