crates/carta/tests/snapshots/golden_writer__docbook__common__image-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  an <inlinemediaobject>
    <imageobject>
      <imagedata fileref="pic.png" />
    </imageobject>
    <textobject>
      <phrase>alt words</phrase>
    </textobject>
  </inlinemediaobject> inline
</para>
