crates/carta/tests/snapshots/golden_writer__docbook__common__inline-code-backtick.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  use <literal>a `b` c</literal> here
</para>
