crates/carta/tests/snapshots/golden_writer__docbook__common__inline-code.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  a <literal>let x = 1;</literal> b
</para>
