crates/carta/tests/snapshots/golden_writer__docbook__common__line-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<literallayout>first line
second line</literallayout>
